--- a/index.html
+++ b/index.html
@@ -9,22 +9,35 @@
 </head>
 <body>
   <div class="container">
-    <h1>Quer casar comigo, meu amor?</h1>
+    <h1 class="titulo">Quer casar comigo, meu amor?</h1>
     <div class="botoes">
       <button id="sim" onclick="window.location.href='mensagem.html'">Sim!</button>
       <button id="nao">Não</button>
     </div>
+    <div id="mensagem-alerta" class="alerta"></div>
   </div>
 
   <script>
     const btnNao = document.getElementById("nao");
+    const alerta = document.getElementById("mensagem-alerta");
+    let tentativas = 0;
 
     btnNao.addEventListener("mouseover", () => {
-      const i = Math.floor(Math.random() * window.innerWidth - 100);
-      const j = Math.floor(Math.random() * window.innerHeight - 100);
+      tentativas++;
+      if (tentativas > 12) {
+        alerta.textContent = "O NÃO NÃO É UMA POSSIBILIDADE PARA VOCÊ";
+        alerta.style.display = "block";
+      }
+
+      const larguraJanela = window.innerWidth - 120;
+      const alturaJanela = window.innerHeight - 50;
+
+      const novaEsquerda = Math.random() * larguraJanela;
+      const novoTopo = Math.random() * alturaJanela;
+
       btnNao.style.position = "absolute";
-      btnNao.style.left = i + "px";
-      btnNao.style.top = j + "px";
+      btnNao.style.left = novaEsquerda + "px";
+      btnNao.style.top = novoTopo + "px";
     });
   </script>
 </body>
